# fastapi-dramatiq

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/actions/pre-test/: action.yaml
.github/workflows/: build.yaml  ci.yaml  pre-tests.yaml  publish.yaml
docker/: Dockerfile  docker-compose.yaml
examples/: example.py
fastapi_dramatiq/: __init__.py  count_words.py  main.py
fastapi_dramatiq/actors/: __init__.py  task.py
fastapi_dramatiq/api/v1/: __init__.py  tasks.py
fastapi_dramatiq/core/: app_factory.py
fastapi_dramatiq/schemas/: __init__.py  task.py
fastapi_dramatiq/settings/: api.py  application.py  base.py  docker.py  rabbitmq.py
scripts/: check.sh  entrypoint_api.sh  entrypoint_dramatiq.sh
scripts/test/: run_containers.sh
