[tool.poetry]
name = "fastapi-dramatiq"
version = "0.1.0"
description = ""
authors = ["Victor Sandoval <vs.software.eng@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_dramatiq"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
dramatiq = {extras = ["watch"], version = "^1.17.0"}
requests = "^2.32.4"
pydantic = "^2.10.5"
pydantic-settings = "^2.8.0"
fastapi = "0.116.1"
rabbitmq = "^0.2.0"
pika = "^1.3.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pyright = "^1.1.397"
types-requests = "^2.31.0.10"
coverage = "^7.7.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
